# DEPRECATED_app-framework-templates

./: .gitignore  build_all
console/: CMakeLists.txt  config.xml.in  xxxxxx-native-client.c
demos/cpu-hybrid-html5/: CMakeLists.txt  README.md  config.xml.in  package.json
demos/cpu-hybrid-html5/app/Frontend/pages/SampleHome/: SampleHome.html  SampleHome.js
demos/cpu-hybrid-html5/app/etc/: AppDefaults.js
demos/cpu-hybrid-html5/binding/: cpu-hybrid-html5-binding.c  export.map
demos/cpu-hybrid-qml/: CMakeLists.txt  config.xml.in  cpu-hybrid-qml-binding.c
html5/: .gitignore  CMakeLists.txt  config.xml.in  gulpfile.js  index.html
html5/app/Frontend/: app.js
html5/app/Frontend/etc/: AppConfig.js  routes.js
html5/app/Frontend/pages/SampleHome/: SampleHome.html  SampleHome.js
html5/app/Frontend/pages/SamplePost/: SamplePost.html  SamplePost.js  SamplePost.scss
html5/app/Frontend/styles/app/: ibz-global.scss
html5/app/Frontend/widgets/FormInput/: FormInput.scss  UploadFiles.js
html5/app/etc/: AppDefaults.js
hybrid/: CMakeLists.txt  config.xml.in  cpu-hybrid-app.qml  cpu-hybrid-binding.c
hybrid-html5/: .gitignore  CMakeLists.txt  config.xml.in  gulpfile.js  package.json
hybrid-html5/app/Frontend/: app.js  index.html
hybrid-html5/app/Frontend/pages/SampleHome/: SampleHome.html  SampleHome.js
hybrid-html5/app/Frontend/styles/app/: _ibz-mixins.scss
hybrid-html5/app/Frontend/widgets/Navigation/: LinkButton.js
hybrid-qml/: CMakeLists.txt  xxxxxx-hybrid-qml-binding.c
native/: .gitignore  xxxxxx-native-client.c
qml/: CMakeLists.txt  xxxxxx-qml-app.qml
service/: .gitignore  CMakeLists.txt  README.md  config.xml.in  xxxxxx-service-binding.c
templates/html5/: CMakeLists.txt  README.md  bower.json  package.json
templates/html5/app/Frontend/pages/SampleHome/: SampleHome.html  SampleHome.js
templates/html5/app/Frontend/widgets/ActionButtons/: AppliButton.js
templates/html5/app/Frontend/widgets/Notifications/: ModalNotification.js  TokenRefreshSvc.js
templates/html5/app/Frontend/widgets/RangeSliders/: RangeSliderMod.js  Rangeslider.scss
templates/hybrid-html5/: CMakeLists.txt  README.md
templates/hybrid-html5/app/Frontend/etc/: routes.js
templates/hybrid-html5/app/Frontend/pages/SampleHome/: SampleHome.scss
templates/hybrid-html5/app/Frontend/widgets/Navigation/: Navigation.scss
templates/hybrid-html5/app/Frontend/widgets/Notifications/: Notifications.scss
templates/hybrid-html5/app/etc/: AppDefaults.js
templates/hybrid-html5/binding/: xxxxxx-hybrid-binding.c
templates/hybrid-qml/: CMakeLists.txt  config.xml.in  xxxxxx-hybrid-qml-app.qml
templates/native/: CMakeLists.txt  config.xml.in  xxxxxx-native-client.c
templates/qml/: CMakeLists.txt  config.xml.in
templates/service/: .gitignore  CMakeLists.txt  README.md  config.xml.in  xxxxxx-service-binding.c
